[gd_scene load_steps=25 format=3 uid="uid://tdujec33wash"]

[ext_resource type="Script" uid="uid://dvon2dbuvgb33" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bij04v2y3yys3" path="res://scenes/proximity_test.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bawv6l13l36np" path="res://scenes/hand_area.tscn" id="4_lquwl"]
[ext_resource type="PackedScene" uid="uid://b625eilen4luf" path="res://new_player.tscn" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://bj1fwi2fi1i3y" path="res://assets/black_box.png" id="5_lquwl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ig7tw"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_0xm2m"]
sky_material = SubResource("ProceduralSkyMaterial_ig7tw")

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 2
sky = SubResource("Sky_0xm2m")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_lquwl"]
size = Vector3(49.4164, 2.06006, 0.517578)

[sub_resource type="SphereShape3D" id="SphereShape3D_5vw27"]
radius = 0.0794223

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lquwl"]
animation = &"New_idle"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_lquwl"]
filter_enabled = true
filters = ["Node/Skeleton3D:mixamorigRightArm", "Node/Skeleton3D:mixamorigRightForeArm", "Node/Skeleton3D:mixamorigRightHand", "Node/Skeleton3D:mixamorigRightHandIndex1", "Node/Skeleton3D:mixamorigRightHandIndex2", "Node/Skeleton3D:mixamorigRightHandIndex3", "Node/Skeleton3D:mixamorigRightHandMiddle1", "Node/Skeleton3D:mixamorigRightHandMiddle2", "Node/Skeleton3D:mixamorigRightHandMiddle3", "Node/Skeleton3D:mixamorigRightHandPinky1", "Node/Skeleton3D:mixamorigRightHandPinky2", "Node/Skeleton3D:mixamorigRightHandPinky3", "Node/Skeleton3D:mixamorigRightHandRing1", "Node/Skeleton3D:mixamorigRightHandRing2", "Node/Skeleton3D:mixamorigRightHandRing3", "Node/Skeleton3D:mixamorigRightHandThumb1", "Node/Skeleton3D:mixamorigRightHandThumb2", "Node/Skeleton3D:mixamorigRightHandThumb3", "Node/Skeleton3D:mixamorigRightShoulder"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_272bh"]
animation = &"New_walk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_5vw27"]
graph_offset = Vector2(-147.095, 80.5413)
nodes/Animation/node = SubResource("AnimationNodeAnimation_lquwl")
nodes/Animation/position = Vector2(300, 260)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_lquwl")
nodes/Blend2/position = Vector2(560, 70)
nodes/New_walk/node = SubResource("AnimationNodeAnimation_272bh")
nodes/New_walk/position = Vector2(310, 70)
nodes/output/position = Vector2(820, 140)
node_connections = [&"Blend2", 0, &"New_walk", &"Blend2", 1, &"Animation", &"output", 0, &"Blend2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7mycd"]
animation = &"New_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5vw27"]
animation = &"New_walk"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_kek77"]
filter_enabled = true
filters = ["Node/Skeleton3D:mixamorigLeftArm", "Node/Skeleton3D:mixamorigLeftForeArm", "Node/Skeleton3D:mixamorigLeftHand", "Node/Skeleton3D:mixamorigLeftHandIndex1", "Node/Skeleton3D:mixamorigLeftHandIndex2", "Node/Skeleton3D:mixamorigLeftHandIndex3", "Node/Skeleton3D:mixamorigLeftHandMiddle1", "Node/Skeleton3D:mixamorigLeftHandMiddle2", "Node/Skeleton3D:mixamorigLeftHandMiddle3", "Node/Skeleton3D:mixamorigLeftHandPinky1", "Node/Skeleton3D:mixamorigLeftHandPinky2", "Node/Skeleton3D:mixamorigLeftHandPinky3", "Node/Skeleton3D:mixamorigLeftHandRing1", "Node/Skeleton3D:mixamorigLeftHandRing2", "Node/Skeleton3D:mixamorigLeftHandRing3", "Node/Skeleton3D:mixamorigLeftHandThumb1", "Node/Skeleton3D:mixamorigLeftHandThumb2", "Node/Skeleton3D:mixamorigLeftHandThumb3", "Node/Skeleton3D:mixamorigLeftShoulder"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lquwl"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_5vw27")
nodes/Animation/position = Vector2(280, 110)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_7mycd")
"nodes/Animation 2/position" = Vector2(345.232, 322.717)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_kek77")
nodes/Blend2/position = Vector2(591.022, 242.038)
nodes/output/position = Vector2(950, 170)
node_connections = [&"Blend2", 0, &"Animation", &"Blend2", 1, &"Animation 2", &"output", 0, &"Blend2"]

[sub_resource type="BoxMesh" id="BoxMesh_lquwl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lquwl"]
transparency = 1

[sub_resource type="SphereShape3D" id="SphereShape3D_lquwl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_272bh"]
radius = 0.0375767

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mycd"]
transparency = 1

[sub_resource type="SphereShape3D" id="SphereShape3D_7mycd"]

[node name="Main" type="Node3D"]
script = ExtResource("1_0xm2m")
player_one_node_a = NodePath("new_target")
player_one_node_b = NodePath("HandArea")
player_two_node_a = NodePath("new_target2")
player_two_node_b = NodePath("HandArea")
player_one_body_node = NodePath("Player")
player_two_body_node = NodePath("Player2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
physics_interpolation_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0)
size = Vector3(140.5, 1, 20)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.78552e-08, 0.766044, -0.642788, 2.18557e-08, 0.642788, 0.766044, 1, 1.49502e-08, -4.10753e-08, -4, 5, 0)
keep_aspect = 0

[node name="Center" type="Node3D" parent="."]

[node name="Tracker" type="Node3D" parent="."]

[node name="Proximity Test" parent="." instance=ExtResource("3_h2yge")]

[node name="Hands" type="Node3D" parent="."]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 2.50625, 0)
use_collision = true
height = 4.075

[node name="HandArea" parent="." node_paths=PackedStringArray("player_one", "player_two") instance=ExtResource("4_lquwl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41786, 0)
player_one = NodePath("../Player")
player_two = NodePath("../Player2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="Control"]
visible = false
scale = Vector2(0.04, 1.46)
texture = ExtResource("5_lquwl")

[node name="Middle Wall" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Middle Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0297, 0.530029, -0.00580406)
shape = SubResource("BoxShape3D_lquwl")
disabled = true
debug_fill = false

[node name="RigidBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57508, 0)
gravity_scale = 0.0
freeze = true

[node name="CenterPin" type="Generic6DOFJoint3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.039031, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("SphereShape3D_5vw27")

[node name="Player" parent="." instance=ExtResource("5_7mycd")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.57, -0.5)
has_gravity = false
can_jump = false
base_speed = 2.0
input_left = "move_left"
input_right = "move_right"
input_forward = "move_up"
input_back = "move_down"
input_jump = "jump"
reach_hand = "reach_hand"

[node name="Skeleton3D" parent="Player/Node" index="0"]
bones/0/position = Vector3(3.11068, 66.3691, 1.77763)
bones/0/rotation = Quaternion(0.00215357, -0.0310485, 0.0380724, 0.99879)
bones/1/rotation = Quaternion(-0.00145366, 0.00840051, -0.00411436, 0.999955)
bones/2/rotation = Quaternion(0.00920341, 0.0180673, -0.0140998, 0.999695)
bones/3/rotation = Quaternion(-0.0298617, 0.0178375, -0.0186354, 0.999221)
bones/4/rotation = Quaternion(-0.0200684, -0.00311082, -0.0221723, 0.999548)
bones/5/rotation = Quaternion(0.00191855, -0.0182746, -0.00635267, 0.999811)
bones/7/rotation = Quaternion(-0.651167, -0.392377, 0.52141, -0.387497)
bones/8/rotation = Quaternion(0.469306, -0.0227593, -0.302921, 0.82914)
bones/9/rotation = Quaternion(0.0119, -0.000139229, 0.23847, 0.971077)
bones/10/rotation = Quaternion(0.1754, 0.357777, -0.0877036, 0.912984)
bones/11/rotation = Quaternion(-0.0752677, 0.341083, 0.162352, 0.922843)
bones/12/rotation = Quaternion(0.111527, -0.165414, -0.0987633, 0.974908)
bones/13/rotation = Quaternion(0.0403217, 0.11656, 0.178723, 0.976138)
bones/15/rotation = Quaternion(0.0419393, 0.0895059, 0.0422297, 0.994206)
bones/16/rotation = Quaternion(0.151013, -0.000873379, -0.0205901, 0.988317)
bones/17/rotation = Quaternion(0.0382758, -0.00023244, -0.00123015, 0.999266)
bones/19/rotation = Quaternion(0.117936, 0.00452607, -0.0134915, 0.992919)
bones/20/rotation = Quaternion(0.232836, -0.00146057, -0.025159, 0.972189)
bones/21/rotation = Quaternion(0.137617, -6.83228e-05, -0.0116655, 0.990417)
bones/23/rotation = Quaternion(0.269505, 0.0072452, -0.0104394, 0.962915)
bones/24/rotation = Quaternion(0.147011, 0.00104401, -0.0135181, 0.989042)
bones/25/rotation = Quaternion(0.107228, 0.00132225, -0.00854162, 0.994197)
bones/27/rotation = Quaternion(0.237112, 0.0106392, -0.0567687, 0.969764)
bones/28/rotation = Quaternion(0.253782, -0.00215586, -0.0200843, 0.967051)
bones/29/rotation = Quaternion(0.0613028, 4.63985e-06, -0.015639, 0.997997)
bones/31/rotation = Quaternion(0.53095, -0.469731, 0.534244, 0.460465)
bones/32/rotation = Quaternion(0.505228, -0.128138, -0.136701, 0.8424)
bones/33/rotation = Quaternion(0.0106804, 0.000181186, -0.225848, 0.974104)
bones/34/rotation = Quaternion(0.000644338, -0.0287892, 0.181288, 0.983008)
bones/35/rotation = Quaternion(0.165436, -0.0981338, -0.053087, 0.979889)
bones/36/rotation = Quaternion(0.0241898, -0.0527475, -0.0470039, 0.997208)
bones/37/rotation = Quaternion(-0.0302276, -0.00509576, -0.0325887, 0.998999)
bones/39/rotation = Quaternion(0.0778686, -0.00613121, -0.0158604, 0.996819)
bones/40/rotation = Quaternion(0.318465, 1.28094e-05, 0.0365874, 0.947228)
bones/41/rotation = Quaternion(0.0765218, -2.16789e-05, 0.00851917, 0.997032)
bones/43/rotation = Quaternion(0.18407, -0.0182072, 0.00756293, 0.982715)
bones/44/rotation = Quaternion(0.20944, 2.98198e-06, 0.0207717, 0.977601)
bones/45/rotation = Quaternion(0.0421756, 0.021211, 0.00677505, 0.998862)
bones/47/rotation = Quaternion(0.256121, -0.0160369, -0.0131858, 0.966422)
bones/48/rotation = Quaternion(0.135215, 5.42353e-06, 0.0162884, 0.990682)
bones/49/rotation = Quaternion(0.0666825, 0.0231612, 0.00870727, 0.997467)
bones/51/rotation = Quaternion(0.356217, -0.0288715, 0.0142404, 0.933849)
bones/52/rotation = Quaternion(0.142642, 0.000136137, 0.015985, 0.989645)
bones/53/rotation = Quaternion(0.0396743, -6.132e-05, 0.00613379, 0.999194)
bones/55/rotation = Quaternion(-0.0797096, -0.0152855, 0.994673, 0.0635417)
bones/56/rotation = Quaternion(-0.405689, -0.0660993, -0.0308715, 0.911095)
bones/57/rotation = Quaternion(0.310862, 0.060053, 0.0871522, 0.944544)
bones/58/rotation = Quaternion(0.505566, -0.0168486, -0.00351741, 0.862616)
bones/60/rotation = Quaternion(0.025811, 0.23355, 0.969801, 0.0653803)
bones/61/rotation = Quaternion(-0.184105, -0.0366516, 0.00557372, 0.982207)
bones/62/rotation = Quaternion(0.435411, 0.016235, 0.0268122, 0.899686)
bones/63/rotation = Quaternion(0.317661, -0.00865932, 0.00219508, 0.948162)

[node name="LookAtModifier3D" parent="Player/Node/Skeleton3D" index="1"]
target_node = NodePath("../../../../HandArea")
bone_name = "mixamorigRightArm"
bone = 32

[node name="AnimationTree" type="AnimationTree" parent="Player"]
tree_root = SubResource("AnimationNodeBlendTree_5vw27")
anim_player = NodePath("../AnimationPlayer")
parameters/Blend2/blend_amount = 1.0

[node name="Player2" parent="." instance=ExtResource("5_7mycd")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.57, 0.5)
has_gravity = false
can_jump = false
base_speed = 2.0
input_left = "move_left_p2"
input_right = "move_right_p2"
input_forward = "move_up_p2"
input_back = "move_down_p2"
input_jump = "jump_p2"
reach_hand = "reach_hand_p2"
playerTwo = true

[node name="Skeleton3D" parent="Player2/Node" index="0"]
bones/0/position = Vector3(3.11068, 66.3691, 1.77763)
bones/0/rotation = Quaternion(0.00215357, -0.0310485, 0.0380724, 0.99879)
bones/1/rotation = Quaternion(-0.00145366, 0.00840051, -0.00411436, 0.999955)
bones/2/rotation = Quaternion(0.00920341, 0.0180673, -0.0140998, 0.999695)
bones/3/rotation = Quaternion(-0.0298617, 0.0178375, -0.0186354, 0.999221)
bones/4/rotation = Quaternion(-0.0200684, -0.00311082, -0.0221723, 0.999548)
bones/5/rotation = Quaternion(0.00191855, -0.0182746, -0.00635267, 0.999811)
bones/7/rotation = Quaternion(-0.504112, -0.481702, 0.566284, -0.439497)
bones/8/rotation = Quaternion(0.526433, 0.118105, 0.0647592, 0.839479)
bones/9/rotation = Quaternion(0.0131047, -0.000138132, 0.262608, 0.964814)
bones/10/rotation = Quaternion(0.0822874, 0.119972, -0.172728, 0.974167)
bones/11/rotation = Quaternion(0.149676, -0.0369232, 0.154514, 0.975889)
bones/12/rotation = Quaternion(0.0123169, 0.0223887, -0.0574039, 0.998024)
bones/13/rotation = Quaternion(-0.0228321, 0.00477398, 0.0228562, 0.999467)
bones/15/rotation = Quaternion(0.194984, 0.00802112, 0.0504803, 0.979474)
bones/16/rotation = Quaternion(0.24192, 1.73029e-05, -0.0265072, 0.969934)
bones/17/rotation = Quaternion(0.0871498, 1.43288e-05, -0.00909446, 0.996154)
bones/19/rotation = Quaternion(0.242157, 0.0121468, 0.0416218, 0.969268)
bones/20/rotation = Quaternion(0.150956, 0.00021011, -0.0142528, 0.988438)
bones/21/rotation = Quaternion(0.120535, -0.000137544, -0.0103125, 0.992656)
bones/23/rotation = Quaternion(0.285807, 0.0122359, 0.0514625, 0.956826)
bones/24/rotation = Quaternion(0.116877, 1.98878e-05, -0.0106245, 0.99309)
bones/25/rotation = Quaternion(0.0932583, -7.48438e-05, -0.00950501, 0.995597)
bones/27/rotation = Quaternion(0.354354, 0.0248903, 0.00628881, 0.934759)
bones/28/rotation = Quaternion(0.146672, 0.00490808, 0.0201752, 0.988967)
bones/29/rotation = Quaternion(0.0669061, 0.000145083, -0.0100018, 0.997709)
bones/31/rotation = Quaternion(0.597514, -0.399005, 0.506118, 0.477093)
bones/32/rotation = Quaternion(0.460849, -0.0945451, -0.10173, 0.876545)
bones/33/rotation = Quaternion(0.0188099, 0.000170584, -0.397761, 0.917296)
bones/34/rotation = Quaternion(-0.069198, -0.144676, -0.0483928, 0.98587)
bones/35/rotation = Quaternion(0.099144, -0.219178, -0.229207, 0.943184)
bones/36/rotation = Quaternion(-0.0882531, -0.0359056, 0.0434853, 0.994501)
bones/37/rotation = Quaternion(-0.00663825, 0.0795743, -0.16733, 0.982662)
bones/39/rotation = Quaternion(0.141102, 0.00765764, -0.074328, 0.987171)
bones/40/rotation = Quaternion(0.233826, 0.00146855, 0.0288831, 0.971848)
bones/41/rotation = Quaternion(0.154186, 0.00221154, 0.00369738, 0.988032)
bones/43/rotation = Quaternion(0.256659, 0.0085224, -0.0304099, 0.965986)
bones/44/rotation = Quaternion(0.330276, 0.0027298, 0.0339537, 0.94327)
bones/45/rotation = Quaternion(0.27246, 0.000705696, 0.0264904, 0.961802)
bones/47/rotation = Quaternion(0.389462, 0.00260438, 0.0129175, 0.920948)
bones/48/rotation = Quaternion(0.208284, -0.00142688, 0.0228336, 0.977801)
bones/49/rotation = Quaternion(0.177564, 0.00136666, -0.000111811, 0.984108)
bones/51/rotation = Quaternion(0.4251, 0.00147768, 0.0222406, 0.904872)
bones/52/rotation = Quaternion(0.410077, 0.00326205, 0.0356724, 0.911347)
bones/53/rotation = Quaternion(0.363799, 0.010991, 0.0172912, 0.931252)
bones/55/rotation = Quaternion(-0.0797096, -0.0152855, 0.994673, 0.0635417)
bones/56/rotation = Quaternion(-0.405689, -0.0660993, -0.0308715, 0.911095)
bones/57/rotation = Quaternion(0.310862, 0.060053, 0.0871522, 0.944544)
bones/58/rotation = Quaternion(0.505566, -0.0168486, -0.00351741, 0.862616)
bones/60/rotation = Quaternion(0.025811, 0.23355, 0.969801, 0.0653803)
bones/61/rotation = Quaternion(-0.184105, -0.0366516, 0.00557372, 0.982207)
bones/62/rotation = Quaternion(0.435411, 0.016235, 0.0268122, 0.899686)
bones/63/rotation = Quaternion(0.317661, -0.00865932, 0.00219508, 0.948162)

[node name="LookAtModifier3D" parent="Player2/Node/Skeleton3D" index="1"]
target_node = NodePath("../../../../HandArea")
bone_name = "mixamorigLeftArm"
bone = 8

[node name="AnimationTree" type="AnimationTree" parent="Player2"]
tree_root = SubResource("AnimationNodeBlendTree_lquwl")
anim_player = NodePath("../AnimationPlayer")
parameters/Blend2/blend_amount = 1.0

[node name="new_target" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000540495, 1.00203, 2.69562e-05)
gravity_scale = 0.0

[node name="new_target_old" type="CSGMesh3D" parent="new_target"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("BoxMesh_lquwl")
material = SubResource("StandardMaterial3D_lquwl")

[node name="P1_Hand" type="Area3D" parent="new_target/new_target_old"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="new_target/new_target_old/P1_Hand"]
shape = SubResource("SphereShape3D_lquwl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="new_target"]
shape = SubResource("SphereShape3D_272bh")
disabled = true

[node name="PinJoint3D" type="PinJoint3D" parent="new_target"]
params/bias = 0.99
params/damping = 8.0

[node name="new_target2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
gravity_scale = 0.0

[node name="new_target2_old" type="CSGMesh3D" parent="new_target2"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("BoxMesh_lquwl")
material = SubResource("StandardMaterial3D_7mycd")

[node name="P2_Hand" type="Area3D" parent="new_target2/new_target2_old"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="new_target2/new_target2_old/P2_Hand"]
shape = SubResource("SphereShape3D_7mycd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="new_target2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
shape = SubResource("SphereShape3D_272bh")
disabled = true

[node name="PinJoint3D" type="PinJoint3D" parent="new_target2"]
params/bias = 0.99
params/damping = 8.0

[editable path="Proximity Test"]
[editable path="HandArea"]
[editable path="Player"]
[editable path="Player2"]
